"/collect" methods implemented
